--- a/README
+++ b/README
@@ -5,15 +5,16 @@
 DShadow: DShadow_train, DShadow_out
 
 Process:
+0. Split DShadow dataset into DShadow_train and DShadow_out
 1. Shadow Model Training
 Input: DShadow dataset(DShadow_train_x)
 Output: DShadow dataset(DShadow_train_y)
-
-2. Attack Model Training
+2. Shadow Model Testing(Obtained DShadow_train_y,DShadow_out_y ), build Attack Dataset
+3. Attack Model Training
 Input:  DShadow_train_y, DShadow_out_y   #(top 3 probabilities)
 Output: 1(DShadow_train_y), 0(DShadow_out_y)
 
-3. Membership Inference
+4. Membership Inference
 Model: Attack Model
 Input: DTarget_y #(top 3 probabilities)
 Output: 1(DTarget_y), 0(out of DTarget)
